--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <a href="index.html">Projeto</a>
 
-            <a href="#">Github</a>
+            <a href="https://github.com/Orbitadev">Github</a>
 
             <a href="Relatorio.html">Relatorio</a>
 
@@ -50,7 +50,7 @@
         <div class="grid-item">
             <div class="item-text">Bryan Duarte</div>
             <img src="src/Bryan.png" alt="Image 3" class="item-image">
-            <a href="page3.html" class="item-button">GitHub</a>
+            <a href="https://github.com/Bryan092004" class="item-button">GitHub</a>
         </div>
         
         <!-- Item 4 -->
